Fix: Dark mode values.

--- a/core/app/modules/import-export/assets/js/ui/panel/panel.scss
+++ b/core/app/modules/import-export/assets/js/ui/panel/panel.scss
@@ -1,7 +1,7 @@
 $e-app-import-export-panel-header-background-color: theme-colors(light);
-$e-app-import-export-panel-header-dark-background-color: dark-tints(500);
+$e-app-import-export-panel-header-dark-background-color: dark-tints(600);
 $e-app-import-export-panel-body-background-color: rgba(theme-colors(light), $opacity-05);
-$e-app-import-export-panel-body-dark-background-color: rgba(dark-theme-colors(dark), $opacity-005);
+$e-app-import-export-panel-body-dark-background-color: rgba(dark-tints(600), $opacity-05);
 
 $root: e-app-import-export-panel;
 
